// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeaderboardAccountInformation No user connected Displays fields as N/A 1`] = `
<div>
  <div
    class="MuiGrid-root-5 MuiGrid-container-6"
  >
    <div
      class="MuiGrid-root-5 makeStyles-boostContainer-2 MuiGrid-container-6 MuiGrid-item-7 MuiGrid-align-items-xs-center-14 MuiGrid-grid-xs-12-51 MuiGrid-grid-sm-true-53"
    >
      <div
        class="MuiGrid-root-5 makeStyles-justifyCenterOnMobile-1 MuiGrid-container-6 MuiGrid-item-7 MuiGrid-align-items-xs-center-14 MuiGrid-grid-xs-12-51"
      >
        <h4
          class="MuiTypography-root-108 MuiTypography-h4-116 MuiTypography-displayInline-136"
        >
          Boost:
        </h4>
        <h4
          class="MuiTypography-root-108 makeStyles-headerValueText-3 MuiTypography-h4-116 MuiTypography-displayInline-136"
        >
          N/A
        </h4>
      </div>
      <div
        class="MuiGrid-root-5 makeStyles-justifyCenterOnMobile-1 MuiGrid-container-6 MuiGrid-item-7 MuiGrid-align-items-xs-center-14 MuiGrid-grid-xs-12-51"
      >
        <h6
          class="MuiTypography-root-108 MuiTypography-h6-118 MuiTypography-colorTextSecondary-134 MuiTypography-displayInline-136"
        >
          Rank:
        </h6>
        <h6
          class="MuiTypography-root-108 makeStyles-headerValueText-3 MuiTypography-h6-118 MuiTypography-colorTextSecondary-134 MuiTypography-displayInline-136"
        >
          N/A
        </h6>
      </div>
    </div>
    <div
      class="makeStyles-infoContainer-4"
    >
      <button
        class="MuiButtonBase-root-168 MuiButton-root-139 MuiButton-contained-147 MuiButton-containedPrimary-148"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label-140"
        >
          Connect Wallet
        </span>
        <span
          class="MuiTouchRipple-root-175"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`LeaderboardAccountInformation User connected, data loaded Displays user rank, and boost 1`] = `
<div>
  <div
    class="MuiGrid-root-5 MuiGrid-container-6"
  >
    <div
      class="MuiGrid-root-5 makeStyles-boostContainer-2 MuiGrid-container-6 MuiGrid-item-7 MuiGrid-align-items-xs-center-14 MuiGrid-grid-xs-12-51 MuiGrid-grid-sm-true-53"
    >
      <div
        class="MuiGrid-root-5 makeStyles-justifyCenterOnMobile-1 MuiGrid-container-6 MuiGrid-item-7 MuiGrid-align-items-xs-center-14 MuiGrid-grid-xs-12-51"
      >
        <h4
          class="MuiTypography-root-108 MuiTypography-h4-116 MuiTypography-displayInline-136"
        >
          Boost:
        </h4>
        <h4
          class="MuiTypography-root-108 makeStyles-headerValueText-3 MuiTypography-h4-116 MuiTypography-displayInline-136"
        >
          2x
        </h4>
      </div>
      <div
        class="MuiGrid-root-5 makeStyles-justifyCenterOnMobile-1 MuiGrid-container-6 MuiGrid-item-7 MuiGrid-align-items-xs-center-14 MuiGrid-grid-xs-12-51"
      >
        <h6
          class="MuiTypography-root-108 MuiTypography-h6-118 MuiTypography-colorTextSecondary-134 MuiTypography-displayInline-136"
        >
          Rank:
        </h6>
        <h6
          class="MuiTypography-root-108 makeStyles-headerValueText-3 MuiTypography-h6-118 MuiTypography-colorTextSecondary-134 MuiTypography-displayInline-136"
        >
          10
        </h6>
      </div>
    </div>
    <div
      class="makeStyles-infoContainer-4"
    >
      <button
        class="MuiButtonBase-root-168 MuiButton-root-139 MuiButton-contained-147 MuiButton-containedPrimary-148"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label-140"
        >
          Connect Wallet
        </span>
        <span
          class="MuiTouchRipple-root-175"
        />
      </button>
      <div
        class="makeStyles-suggestionContainer-173"
      >
        <p
          class="MuiTypography-root-108 makeStyles-amountToNextRank-174 MuiTypography-body1-110 MuiTypography-colorTextSecondary-134"
        >
          <span
            class="MuiTypography-root-108 makeStyles-amountToNextRank-174 MuiTypography-body1-110 MuiTypography-colorTextPrimary-133"
          >
            $0.225
          </span>
           more 
          <span
            class="MuiTypography-root-108 makeStyles-amountToNextRank-174 MuiTypography-body1-110 MuiTypography-colorTextPrimary-133"
          >
            NATIVE
          </span>
           
          to next rank
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeaderboardAccountInformation User connected, no data loaded Displays fields as loading skeletons 1`] = `
<div>
  <div
    class="MuiGrid-root-5 MuiGrid-container-6"
  >
    <div
      class="MuiGrid-root-5 makeStyles-boostContainer-2 MuiGrid-container-6 MuiGrid-item-7 MuiGrid-align-items-xs-center-14 MuiGrid-grid-xs-12-51 MuiGrid-grid-sm-true-53"
    >
      <div
        class="MuiGrid-root-5 makeStyles-justifyCenterOnMobile-1 MuiGrid-container-6 MuiGrid-item-7 MuiGrid-align-items-xs-center-14 MuiGrid-grid-xs-12-51"
      >
        <h4
          class="MuiTypography-root-108 MuiTypography-h4-116 MuiTypography-displayInline-136"
        >
          Boost:
        </h4>
        <h4
          class="MuiTypography-root-108 makeStyles-headerValueText-3 MuiTypography-h4-116 MuiTypography-displayInline-136"
        >
          N/A
        </h4>
      </div>
      <div
        class="MuiGrid-root-5 makeStyles-justifyCenterOnMobile-1 MuiGrid-container-6 MuiGrid-item-7 MuiGrid-align-items-xs-center-14 MuiGrid-grid-xs-12-51"
      >
        <h6
          class="MuiTypography-root-108 MuiTypography-h6-118 MuiTypography-colorTextSecondary-134 MuiTypography-displayInline-136"
        >
          Rank:
        </h6>
        <h6
          class="MuiTypography-root-108 makeStyles-headerValueText-3 MuiTypography-h6-118 MuiTypography-colorTextSecondary-134 MuiTypography-displayInline-136"
        >
          N/A
        </h6>
      </div>
    </div>
    <div
      class="makeStyles-infoContainer-4"
    >
      <button
        class="MuiButtonBase-root-168 MuiButton-root-139 MuiButton-contained-147 MuiButton-containedPrimary-148"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label-140"
        >
          Connect Wallet
        </span>
        <span
          class="MuiTouchRipple-root-175"
        />
      </button>
    </div>
  </div>
</div>
`;
